#69 refactoring